--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1 class="text-center mx-auto">Bienvenue dans ce projet Angular-Symfony</h1>
+<h1 class="text-center mx-auto text-uppercase m-3">Bienvenue dans ce projet Angular-Symfony</h1>
 
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
