--- a/src/app/components/personne/personne.component.html
+++ b/src/app/components/personne/personne.component.html
@@ -1,16 +1,49 @@
-<h2>Ajouter une nouvelle personne</h2>
-<form>
+<div class="container mb-3">
+    <div class="card p-2 mx-5" id="accordion">
+        <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+            <h2>Ajouter une nouvelle personne <i class="fa-solid fa-chevron-down text-info"></i></h2>
+        </a>
+        <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
+            <form #monForm="ngForm" (ngSubmit)="ajouterPersonne()">
+                <div class="mb-3 mt-3">
+                    <label for="nom" class="form-label">Nom:</label>
+                    <input type="text" class="form-control" id="nom" placeholder="Enter nom" name="nom"
+                        [(ngModel)]="personne.nom">
+                </div>
+                <div class="mb-3">
+                    <label for="prenom" class="form-label">Pr&eacute;nom:</label>
+                    <input type="text" class="form-control" id="prenom" placeholder="Enter prénom" name="prenom"
+                        [(ngModel)]="personne.prenom">
+                </div>
+                <button type="submit" class="btn btn-success" [disabled]="!monForm.valid">Ajouter</button>
+            </form>
+        </div>
+    </div>
+</div>
+<div class="card">
+    <h2 class="card text-center p-2 bg-light m-2">Liste de personnes</h2>
 
-</form>
-<h2 class="card text-center mx-5 p-2 bg-light">Liste de personnes</h2>
-
-<div class="row">
-    <div class="col mx-5">
-        <ul class="list-group">
-            <li *ngFor="let elt of personnes" class="list-group-item">
-                {{elt.prenom}} {{ elt.nom }}
-            </li>
-        </ul>
-
+    <div class="row">
+        <div class="col mx-5">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Nom</th>
+                        <th>Prénom</th>
+                        <th>Date d'enregistrement</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let elt of personnes">
+                        <td>{{ elt.nom }}</td>
+                        <td> {{elt.prenom}}</td>
+                        <td> {{ elt.dateEnregistrement }}</td>
+                        <td><button class="text-danger m-2 btn"><i class="fa-solid fa-trash-can"></i></button><button
+                                class="text-warning btn"><i class="fa-solid fa-file-pen"></i></button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
