--- a/src/app/components/personne/personne.component.html
+++ b/src/app/components/personne/personne.component.html
@@ -1,9 +1,9 @@
 <div class="container mb-3">
-    <div class="card p-2 mx-5" id="accordion">
+    <div class="card p-2 mx-5">
         <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
-            <h2>Ajouter une nouvelle personne <i class="fa-solid fa-chevron-down text-info"></i></h2>
+            <h2>Ajouter une nouvelle personne <i class="fa-solid fa-chevron-down text-info float-right"></i></h2>
         </a>
-        <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
+        <div id="collapseOne" class="collapse">
             <form #monForm="ngForm" (ngSubmit)="ajouterPersonne()">
                 <div class="mb-3 mt-3">
                     <label for="nom" class="form-label">Nom:</label>
@@ -39,8 +39,10 @@
                         <td>{{ elt.nom }}</td>
                         <td> {{elt.prenom}}</td>
                         <td> {{ elt.dateEnregistrement }}</td>
-                        <td><button class="text-danger m-2 btn"><i class="fa-solid fa-trash-can"></i></button><button
-                                class="text-warning btn"><i class="fa-solid fa-file-pen"></i></button></td>
+                        <td>
+                            <button class="text-danger m-2 btn"><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="text-warning btn"><i class="fa-solid fa-file-pen"></i></button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
