--- a/src/app/components/personne/personne.component.html
+++ b/src/app/components/personne/personne.component.html
@@ -40,7 +40,7 @@
                         <td> {{elt.prenom}}</td>
                         <td> {{ elt.dateEnregistrement }}</td>
                         <td>
-                            <button class="text-danger m-2 btn"><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="text-danger m-2 btn" (click)="supprimerPersonne(elt.id)"><i class="fa-solid fa-trash-can"></i></button>
                             <button class="text-warning btn"><i class="fa-solid fa-file-pen"></i></button>
                         </td>
                     </tr>
