--- a/src/app/components/personne/personne.component.html
+++ b/src/app/components/personne/personne.component.html
@@ -3,7 +3,7 @@
         <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
             <h2>Ajouter une nouvelle personne <i class="fa-solid fa-chevron-down text-info float-right"></i></h2>
         </a>
-        <div id="collapseOne" class="collapse">
+        <div id="collapseOne" class="collapse col-6 mx-auto">
             <form #monForm="ngForm" (ngSubmit)="ajouterPersonne()">
                 <div class="mb-3 mt-3">
                     <label for="nom" class="form-label">Nom:</label>
@@ -25,7 +25,7 @@
 
     <div class="row">
         <div class="col mx-5">
-            <table class="table table-striped">
+            <table class="table table-striped align-middle">
                 <thead>
                     <tr>
                         <th>Nom</th>
@@ -40,8 +40,8 @@
                         <td> {{elt.prenom}}</td>
                         <td> {{ elt.dateEnregistrement }}</td>
                         <td>
-                            <button class="text-danger m-2 btn" (click)="supprimerPersonne(elt.id)"><i class="fa-solid fa-trash-can"></i></button>
-                            <button class="text-warning btn"><i class="fa-solid fa-file-pen"></i></button>
+                            <button class="text-danger btn" (click)="supprimerPersonne(elt.id)"><i class="fa-solid fa-trash-can"></i></button>
+                            <a [routerLink]="['/personne', elt.id]" class="text-warning btn"><i class="fa-solid fa-file-pen"></i></a>
                         </td>
                     </tr>
                 </tbody>
