--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -3,16 +3,16 @@
         <h2>Connexion</h2>
         <form #monFormLogin="ngForm" (ngSubmit)="connexion()">
             <div class="mb-3 mt-3">
-                <label for="email" class="form-label">Email:</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email"
-                    [(ngModel)]="user.email"><span *ngif="error">{{error}}</span>
+                <label for="email" class="form-label">Email :</label>
+                <input type="email" class="form-control" id="email" name="email" [(ngModel)]="user.email" required>
+                <span *ngIf="error">{{ error }}</span>
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter password" name="password"
-                    [(ngModel)]="user.password">
+                <label for="password" class="form-label">Mot de passe :</label>
+                <input type="password" class="form-control" id="password" name="password" [(ngModel)]="user.password"
+                    required>
             </div>
-            <button type="submit" class="btn btn-success" [disabled]="!monFormLogin.valid">Ajouter</button>
+            <button type="submit" class="btn btn-success" [disabled]="!monFormLogin.valid">Se connecter</button>
         </form>
     </div>
 </div>
