--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1 class="text-center mx-auto text-uppercase m-3">Bienvenue dans ce projet Angular-Symfony</h1>
+<button class="text-center btn btn-info" (click)="deconnexion()">Déconnexion</button>
 
 <div class="container">
   <router-outlet></router-outlet>
